--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
   <link rel="stylesheet" href="./src/css/reset.css">
   <link rel="stylesheet" href="./src/css/estilos.css">
+  <link rel="stylesheet" href="./src/css/responsivo.css">
 </head>
 
 <body>
@@ -109,6 +110,7 @@
       </div>
     </div>
   </main>
+  <script src="./src/js/index.js"></script>
 </body>
 
 </html>
